Chapter5/Ingress/ingress-rules.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: game-ns
spec:
  rules:
  - host: game.foo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ourgame
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-ns
spec:
  rules:
  - host: nginx.foo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
